txt/grammar.txt
menu            -> { MenuDef*  }
MenuDef         -> { ItemDef* }
                -> { MenuStatement* }
ItemDef         -> { ItemStatement* }
MenuStatement   -> name String
                -> fullscreen PrimaryExp
                -> rect PrimaryExp PrimaryExp PrimaryExp PrimaryExp PrimaryExp PrimaryExp
                -> rect PrimaryExp PrimaryExp PrimaryExp PrimaryExp PrimaryExp
                -> rect PrimaryExp PrimaryExp PrimaryExp PrimaryExp
                -> blurworld PrimaryExp
                -> visible PrimaryExp
                -> style PrimaryExp
                -> border PrimaryExp
                -> borderSize PrimaryExp
                -> bordercolor PrimaryExp PrimaryExp PrimaryExp PrimaryExp
                -> backcolor PrimaryExp PrimaryExp PrimaryExp PrimaryExp
                -> forecolor PrimaryExp PrimaryExp PrimaryExp PrimaryExp
                -> background String
                -> disablecolor PrimaryExp PrimaryExp PrimaryExp PrimaryExp
                -> fadeamount PrimaryExp    
                -> fadeClamp PrimaryExp
                -> fadeCycle PrimaryExp
                -> fadeInAmount PrimaryExp
                -> focuscolor PrimaryExp PrimaryExp PrimaryExp PrimaryExp
                -> ownerdraw PrimaryExp
                -> soundloop PrimaryExp
                -> outOfBoundsClick
                -> popup
                -> legacySplitScreenScale

                -> onOpen { scriptAction* }
                -> onClose { scriptAction* }
                -> onESC { scriptAction* }
                -> execKey String {scriptAction* } --not dont
                -> execKeyInt PrimaryExp {scriptAction*} -- not done


ItemStatement   -> name String
                -> rect PrimaryExp PrimaryExp PrimaryExp PrimaryExp PrimaryExp PrimaryExp
                -> rect PrimaryExp PrimaryExp PrimaryExp PrimaryExp PrimaryExp
                -> rect PrimaryExp PrimaryExp PrimaryExp PrimaryExp
                -> align PrimaryExp
                -> backcolor PrimaryExp PrimaryExp PrimaryExp PrimaryExp
                -> background String
                -> border PrimaryExp
                -> bordercolor PrimaryExp PrimaryExp PrimaryExp PrimaryExp
                -> borderSize PrimaryExp
                -> columns PrimaryExp* --not finished
                -> elementheight PrimaryExp
                -> elementwidth PrimaryExp
                -> elementtype PrimaryExp
                -> feeder PrimaryExp
                -> forecolor PrimaryExp PrimaryExp PrimaryExp PrimaryExp
                -> focusSound String
                -> group String
                -> maxchars PrimaryExp
                -> maxCharsGotoNext
                -> maxpaintchars PrimaryExp
                -> notselectable PrimaryExp
                -> origin PrimaryExp PrimaryExp
                -> outlinecolor PrimaryExp PrimaryExp PrimaryExp PrimaryExp
                -> special PrimaryExp
                -> style PrimaryExp
                -> text String
                -> textalign PrimaryExp
                -> textalignx PrimaryExp
                -> textaligny PrimaryExp
                -> textfile PrimaryExp
                -> textfont PrimaryExp
                -> textsavegame PrimaryExp
                -> textscale PrimaryExp
                -> textstyle PrimaryExp
                -> type PrimaryExp
                -> visible PrimaryExp
                -> exp expression --not finished
                -> autowrapped
                -> decoration
                -> horizontalscroll
                
                -> action { scriptAction* }
                -> doubleclick { scriptAction* }
                -> execKey String { scriptAction* }
                -> execKeyInt PrimaryExp { scriptAction* }
                -> focusDvar { scriptAction* }
                -> leaveFocus { scriptAction* }
                -> mouseEnter { scriptAction* }
                -> mouseEnterText { scriptAction* }
                -> mouseExit { scriptAction* }
                -> mouseExitText { scriptAction* }
                -> onFocus { scriptAction* }


scriptAction    -> close String
                -> closeForGametype String
                -> exec String
                -> execnow String --not done
                -> execNowOnDvarFloatValue --not done
                -> execNowOnDvarIntValue --not done
                -> execNowOnDvarStringValue --not done
                -> execOnDvarFloatValue --not done
                -> execOnDvarIntValue --not done
                -> execOnDvarStringValue --not done
                -> fadein String
                -> fadeout String
                -> getautoupdate --not done
                -> hide String
                -> ingameclose --not done
                -> ingameopen --not done
                -> nextlevel --not done
                -> nosavehide --not done
                -> open String
                -> openforgametype --not done
                -> play String
                -> playLooped String
                -> profilehide --not done
                -> profileshow --not done
                -> scriptMenuRespondOnDvarFloatValue --not done
                -> scriptMenuRespondOnDvarIntValue --not done
                -> scriptMenuRespondOnDvarStringValue --not done
                -> scriptmenuresponse String
                -> setbackground String
                -> setcolor PrimaryExp PrimaryExp PrimaryExp PrimaryExp
                -> setdvar String
                -> setcvar String
                -> setfocus String
                -> setfocusbydvar --not done
                -> setitemcolor String String PrimaryExp PrimaryExp PrimaryExp PrimaryExp
                -> show String
                -> showGamerCard --not done
                -> showhidenewgameresume --not done
                -> uiScript UIScripts
                -> writeSave --not done

UIScripts       ->
PrimaryExp      -> Int
                -> String
                -> Var
                -> (Exp)
Exp             -> PrimaryExp op Exp
String          -> "[A-Za-z0-9!"£$%^&*()_+-=[];'#,./{}:@~<>?|`\s]*"
Int             -> [0-9]+
Float           -> ([0-9]*\.[0-9]+)|([0-9]+\.[0-9]*)
op              -> (\+|\*|\/|\*|\-|%)
Var             -> [A-Za-z0-9]
